--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Chocolate</title>
+    <title>Simply Chocolate</title>
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="shortcut icon"
@@ -18,7 +18,19 @@
     />
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <a href="#" class="logo"
+        ><p><span class="first-part-logo">Simply</span> Chocolate</p>
+        <img
+          src="./images/chocolate-icon.svg"
+          alt="Chocolate icon"
+          width="21"
+        />
+      </a>
+      <svg width="21" height="21" class="svg">
+        <use href="./images/icons.min.svg#burger-icon"></use>
+      </svg>
+    </header>
     <main></main>
     <footer></footer>
   </body>
