start first-section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
         <use href="./images/icons.min.svg#burger-icon"></use>
       </svg>
     </header>
-    <main></main>
+    <main>
+      <section class="first-section">
+        <p class="first-section-title">
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </p>
+        <button class="first-section-button" type="button">Buy now</button>
+        <a class="first-section-link" href="#">How it's made</a>
+        <a class="first-section-linkScrollDown">scroll down </a>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
