first section & benefits section

--- a/index.html
+++ b/index.html
@@ -28,18 +28,80 @@
         />
       </a>
       <svg width="21" height="21" class="svg">
-        <use href="./images/icons.min.svg#burger-icon"></use>
+        <use href="./images/icons.svg#burger-icon"></use>
       </svg>
     </header>
     <main>
       <section class="first-section">
         <p class="first-section-title">
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
+          Treat yourself or a loved one <br />
+          to our finest ingredients for a moment of pure delight!
         </p>
-        <button class="first-section-button" type="button">Buy now</button>
-        <a class="first-section-link" href="#">How it's made</a>
-        <a class="first-section-linkScrollDown">scroll down </a>
+        <div class="first-section-button-wrapper">
+          <button class="first-section-button" type="button">Buy now</button>
+          <a class="first-section-link" href="#">How it's made</a>
+        </div>
+        <a class="first-section-linkScrollDown"
+          >scroll down
+          <div class="checkmarkIconWrap">
+            <svg width="10" height="6">
+              <use href="./images/icons.svg#checkMark-icon"></use>
+            </svg>
+          </div>
+        </a>
+      </section>
+      <section class="benefits-section">
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <div class="benefits-icon-wrapper">
+              <svg width="32" height="32">
+                <use href="./images/icons.svg#icon-chocolate-bar"></use>
+              </svg>
+            </div>
+            <div class="benefits-text-wrapper">
+              <p class="benefits-title">Unsurpassed taste</p>
+              <p class="benefits-text">
+                Crafted with the finest quality cocoa beans and a dedication to
+                perfection, each bite is a decadent experience that simply
+                cannot be matched. Savor the richness and complexity of our
+                Unsurpassed Taste and discover a new level of chocolate bliss.
+              </p>
+            </div>
+          </li>
+          <li class="benefits-item">
+            <div class="benefits-icon-wrapper">
+              <svg width="32" height="32">
+                <use href="./images/icons.svg#icon-money"></use>
+              </svg>
+            </div>
+            <div class="benefits-text-wrapper">
+              <p class="benefits-title">Affordable price</p>
+              <p class="benefits-text">
+                Indulge in high-quality chocolate without breaking the bank with
+                Simply Chocolate's selection of affordable treats. Enjoy
+                mouth-watering truffles and velvety chocolate bars without
+                sacrificing taste or quality. Browse our selection and indulge
+                in affordable luxury today.
+              </p>
+            </div>
+          </li>
+          <li class="benefits-item">
+            <div class="benefits-icon-wrapper">
+              <svg width="32" height="32">
+                <use href="./images/icons.svg#icon-spoon"></use>
+              </svg>
+            </div>
+            <div class="benefits-text-wrapper">
+              <p class="benefits-title">Own production</p>
+              <p class="benefits-text">
+                We take pride in our own production process, ensuring that every
+                step is carefully crafted to perfection. From selecting the
+                finest ingredients to handcrafting each piece, our attention to
+                detail is evident in every bite.
+              </p>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer></footer>
