start ingredients section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,36 @@
           </li>
         </ul>
       </section>
+      <section class="ingredients-section">
+        <h2 class="ingredients-section-title">
+          It all adds up to one exceptional
+          <span class="ingredients-section-title-word">taste</span> sensation
+        </h2>
+        <p class="ingredients-section-text">
+          At Simply Chocolate, we believe that the secret to exceptional
+          chocolate is in the details. From the sourcing of the finest
+          ingredients to the careful crafting of each individual piece, every
+          step of our process adds up to one exceptional taste sensation.
+        </p>
+        <ul class="ingredients-list">
+          <li class="ingredients-item">
+            <img src="./images/milk-chocolate.png" alt="Milk chocolate" class="ingredients-image" />
+            <h3 class="ingredients-title">Milk chocolate</h3>
+          </li>
+          <li class="ingredients-item">
+            <img src="./images/milk.png" alt="Bottle of milk"   class="ingredients-image" />
+            <h3 class="ingredients-title">Milk</h3>
+          </li>
+          <li class="ingredients-item">
+            <img src="./images/nuts.png" alt="Nuts"  class="ingredients-image" />
+            <h3 class="ingredients-title">Nuts</h3>
+          </li>
+          <li class="ingredients-item">
+            <img src="./images/cocoa-beans.png" alt="Cocoa beans"   class="ingredients-image"/>
+            <h3 class="ingredients-title"> Semi-sweet chocolate</h1>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
