--- a/index.html
+++ b/index.html
@@ -118,18 +118,50 @@
           <li class="ingredients-item">
             <img src="./images/milk-chocolate.png" alt="Milk chocolate" class="ingredients-image" />
             <h3 class="ingredients-title">Milk chocolate</h3>
+            <div class="overlay">
+              <p class="overlay-title">Milk chocolate</p>
+              <div class="category-wrapper">
+                <p class="overlay-ingredient">chocolate</p>
+                <p class="overlay-category">the benefits</p>
+              </div>
+              <p class="overlay-text">Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all milk chocolate is sold in the United States and Europe.</p>
+            </div>
           </li>
           <li class="ingredients-item">
             <img src="./images/milk.png" alt="Bottle of milk"   class="ingredients-image" />
             <h3 class="ingredients-title">Milk</h3>
+            <div class="overlay">
+              <p class="overlay-title">Milk</p>
+              <div class="category-wrapper">
+                <p class="overlay-ingredient">milk</p>
+                <p class="overlay-category">the benefits</p>
+              </div>
+              <p class="overlay-text">Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of nutrition for young mammals (including breastfed human infants) before they are able to digest solid food.Early-lactation milk, which is called colostrum, contains antibodies that strengthen the immune system.</p>
+            </div>
           </li>
           <li class="ingredients-item">
             <img src="./images/nuts.png" alt="Nuts"  class="ingredients-image" />
             <h3 class="ingredients-title">Nuts</h3>
+            <div class="overlay">
+              <p class="overlay-title">Nuts</p>
+              <div class="category-wrapper">
+                <p class="overlay-ingredient">nuts</p>
+                <p class="overlay-category">the benefits</p>
+              </div>
+              <p class="overlay-text">Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten as part of a nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart disease. They’re a good source of fiber, healthy fats, and plant protein. Plus, they’re great on their own.</p>
+            </div>
           </li>
           <li class="ingredients-item">
             <img src="./images/cocoa-beans.png" alt="Cocoa beans"   class="ingredients-image"/>
             <h3 class="ingredients-title"> Semi-sweet chocolate</h1>
+              <div class="overlay">
+              <p class="overlay-title">Semi-sweet chocolate</p>
+              <div class="category-wrapper">
+                <p class="overlay-ingredient"> sweet chocolate</p>
+                <p class="overlay-category">the benefits</p>
+              </div>
+              <p class="overlay-text">Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an understanding of this type of chocolate is to compare it to a different type of chocolate. Semisweet is darker than milk chocolate. In a taste comparison, it has a slightly bitter taste whereas milk chocolate is sweeter.</p>
+            </div>
           </li>
         </ul>
       </section>
