start howmade section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section class="ingredients-section">
         <h2 class="ingredients-section-title">
           It all adds up to one exceptional
-          <span class="ingredients-section-title-word">taste</span> sensation
+          <span class="other-title-word">taste</span> sensation
         </h2>
         <p class="ingredients-section-text">
           At Simply Chocolate, we believe that the secret to exceptional
@@ -164,6 +164,12 @@
             </div>
           </li>
         </ul>
+      </section>
+      <section class="how-made-section">
+        <h2 class="how-made-section-title">How it's <span class="other-title-word">made</span>?</h2>
+        <div>
+          <img src="./images/how-made-img-mobile.jpg" alt="Work with chocolate">
+      </div>
       </section>
     </main>
     <footer></footer>
