how made section

--- a/index.html
+++ b/index.html
@@ -167,24 +167,30 @@
       </section>
       <section class="how-made-section">
         <h2 class="how-made-section-title">How it's <span class="other-title-word">made</span>?</h2>
-        <div class="how-made-section-image"></div>
+        <div class="how-made-section-image">
+          <img src="./images/play-icon.svg" alt="play-icon">
+        </div>
         <div class="how-made-section-text-box">
           <p class="subtitle-text-box">Try  our chocolates today and discover the perfect balance of flavor</p>
           <ul class="list-text-box">
             <li class="item-text-box">
+              <img src="./images/ellipse.svg" alt="ellipse for list" width="8" height="8">
               <p>Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</p>
             </li>
             <li class="item-text-box">
+              <img src="./images/ellipse.svg" alt="ellipse for list" width="8" height="8">
               <p>At the same time, prepare a water bath. Melt the butter on it.</p>
             </li >
              <li class="item-text-box">
+              <img src="./images/ellipse.svg" alt="ellipse for list" width="8" height="8">
               <p>"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</p>
             </li>
              <li class="item-text-box">
+              <img src="./images/ellipse.svg" alt="ellipse for list" width="8" height="8">
               <p>Heat the mixture over low heat, letting it barely boil.</p>
             </li>
             <li class="item-text-box">
-              <svg><use href="./images/ellipse.svg"></use></svg>
+              <img src="./images/ellipse.svg" alt="ellipse for list" width="8" height="8">
               <p>Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</p>
             </li>
           </ul>
