add product card

--- a/index.html
+++ b/index.html
@@ -196,6 +196,75 @@
           </ul>
         </div>
       </section>
+      <section class="products-section">
+        <h2 class="products-section-title">Our <span class="other-title-word">products</span></h2>
+<ul class="products-list">
+  <li class="products-list-item">
+    <img src="./images/orange-chocolate.png" alt="Orange chocolate" width="230" height="201">
+   <div class="product-name-type-wrapper">
+      <h3 class="product-name">Orange</h3>
+      <p class="type-chocolate">Dark chocolate</p>
+   </div cl>
+    <p class="product-price"> 45 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/apple-chocolate.png" alt="Apple&cranberry chocolate" width="230" height="201">
+    <div class="product-name-type-wrapper">
+      <h3 class="product-name">Apple&Cranberry</h3>
+      <p class="type-chocolate">Milk chocolate</p>
+    </div>
+    <p class="product-price">50 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/lime-chocolate.png" alt="Lime&Sea solt chocolate" width="230" height="201">
+    <div class="product-name-type-wrapper">
+      <h3 class="product-name">Lime&Sea salt</h3>
+      <p class="type-chocolate">Dark chocolate</p>
+    </div>
+    <p class="product-price">66 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/pineapple-chocolate.png" alt="Pineapple chocolate" width="230" height="201">
+    <div class="product-name-type-wrapper">
+      <h3 class="product-name">Pineapple</h3>
+      <p class="type-chocolate">Dark chocolate</p>
+    </div>
+    <p class="product-price">54 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/classic-chocolate.png" alt="Classic chocolate" width="230" height="201">
+    <div class="product-name-type-wrapper">
+      <h3 class="product-name">Classic</h3>
+      <p class="type-chocolate">Milk chocolate</p>
+    </div>
+    <p class="product-price">45 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/honey-chocolate.png" alt="Honey chocolate" width="230" height="201">
+   <div class="product-name-type-wrapper">
+      <h3 class="product-name">Honey</h3>
+      <p class="type-chocolate">Milk chocolate</p>
+   </div>
+    <p class="product-price">50 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/roasted-chocolate.png" alt="Roasted fruits chocolate" width="230" height="201">
+    <div class="product-name-type-wrapper">
+      <h3 class="product-name">Roasted fruits</h3>
+      <p class="type-chocolate">Dark chocolate</p>
+    </div>
+    <p class="product-price">66 UAH</p>
+  </li>
+   <li class="products-list-item">
+    <img src="./images/classic-white-chocolate.png" alt="Classic white chocolate" width="230" height="201">
+    <div class="product-name-type-wrapper">
+      <h3 class="product-name">Classic</h3>
+      <p class="type-chocolate">White chocolate</p>
+    </div>
+    <p class="product-price">54 UAH</p>
+  </li>
+</ul>
+      </section>
     </main>
     <footer></footer>
   </body>
