--- a/index.html
+++ b/index.html
@@ -265,6 +265,17 @@
   </li>
 </ul>
       </section>
+      <section class="sellers-section">
+        <h2 class="sellers-section-title"><span class="other-title-word">Top</span> sellers</h2>
+     <div>
+       <img src="./images/topSeller1.jpg" alt="First seller product">
+       <p class="sellers-section-text">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+     </div>
+   <div >
+       <img src="./images/topSeller2.jpg" alt="Second seller product">
+       <button class="sellers-section-button" type="button">Buy now</button>
+     </div>
+      </section>
     </main>
     <footer></footer>
   </body>
