--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
       </section>
       <section class="products-section">
-        <h2 class="products-section-title">Our <span class="other-title-word">products</span></h2>
+        <h2 class="section-title">Our <span class="other-title-word">products</span></h2>
 <ul class="products-list">
   <li class="products-list-item">
     <img src="./images/orange-chocolate.png" alt="Orange chocolate" width="230" height="201">
@@ -266,7 +266,7 @@
 </ul>
       </section>
       <section class="sellers-section">
-        <h2 class="sellers-section-title"><span class="other-title-word">Top</span> sellers</h2>
+        <h2 class="section-title"><span class="other-title-word">Top</span> sellers</h2>
      <div>
        <img src="./images/topSeller1.jpg" alt="First seller product">
        <p class="sellers-section-text">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
@@ -275,6 +275,66 @@
        <img src="./images/topSeller2.jpg" alt="Second seller product">
        <button class="sellers-section-button" type="button">Buy now</button>
      </div>
+      </section>
+      <section class="review-section">
+            <h2 class="section-title"><span class="other-title-word">Chocolate</span> is loved </h2>
+            <ul class="review-list">
+                <li class="review-item">
+                <div class="review-wrapper">
+                  <img src="./images/review-Victoria.jpg" alt="Victoria's photo">
+                  <p class="client-name">Victoria Dobrzhanska</p>
+                  <p class="review-text">
+                    I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.
+                  </p>
+                </div>
+              </li>
+                 <li class="review-item">
+                <div class="review-wrapper">
+                  <img src="./images/review-Nazar.jpg" alt="Nazar's photo">
+                  <p class="client-name">Nazar Babenko</p>
+                  <p class="review-text">
+                    This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.
+                  </p>
+                </div>
+              </li>
+              <li class="review-item">
+                <div class="review-wrapper">
+                  <img src="./images/review-Olena.jpg" alt="Olena's photo">
+                  <p class="client-name">Olena Kampusch</p>
+                  <p class="review-text">
+                     Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.
+                  </p>
+                </div>
+              </li>
+              <li class="review-item">
+                <div class="review-wrapper">
+                  <img src="./images/review-Natalia.jpg" alt="Natalia's photo">
+                  <p class="client-name">Natalia Sus</p>
+                  <p class="review-text">
+                    The chocolate assortment was delicious. Both dark and milk chocolate pieces were smooth and just right on the sweetness level. 
+                  </p>
+                </div>
+              </li>
+              <li class="review-item">
+                <div class="review-wrapper">
+                  <img src="./images/review-Danilo.jpg" alt="Danilo's photo">
+                  <p class="client-name">Danilo Nottingham</p>
+                  <p class="review-text">
+                    This is delicious. It so rich and flavorful you don’t need to use as many. I love topping an apple with almond butter and these chips for a snack.
+                  </p>
+                </div>
+              </li>
+              <li class="review-item">
+                <div class="review-wrapper">
+                  <img src="./images/review-Irina.jpg" alt="Irina's photo">
+                  <p class="client-name">Irina Tydnyuk</p>
+                  <p class="review-text">
+                    This is simply the best chocolate around, and I'm just thrilled to support a local company! Best local chocolate - world class :)
+                  </p>
+                </div>
+              </li>
+            </ul>
+            <button class="review-section-button" type="button">Leave a review</button>
       </section>
     </main>
     <footer></footer>
